tea products improve how to order

--- a/products/tea.html
+++ b/products/tea.html
@@ -122,39 +122,72 @@
     <!-- About Tea Products -->
     <section class="py-20 bg-light">
         <div class="container mx-auto px-6">
-            <div class="max-w-4xl mx-auto text-center">
-                <h2 class="text-4xl font-bold text-primary mb-6">About Our Tea Products</h2>
-                <p class="text-gray-600 text-lg leading-relaxed mb-12">Discover why global partners choose us for their premium tea sourcing needs.</p>
+            <div class="max-w-4xl mx-auto">
+                <h2 class="text-4xl font-bold text-primary mb-6 text-center">Our Tea Products</h2>
                 
-                <div class="grid md:grid-cols-2 gap-8">
-                    <div class="bg-white p-8 rounded-2xl shadow-lg">
-                        <div class="text-primary text-3xl mb-4">
-                            <i class="fas fa-award"></i>
+                <!-- Product Specifications -->
+                <div class="bg-white p-8 rounded-2xl shadow-lg mb-12">
+                    <div class="grid md:grid-cols-2 gap-8">
+                        <div>
+                            <h3 class="text-xl font-semibold mb-4 text-primary">Our Excellence</h3>
+                            <ul class="space-y-4">
+                                <li class="flex items-start">
+                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
+                                    <div>
+                                        <span class="font-medium">Natural & High Quality:</span>
+                                        <p class="text-gray-600">Premium Indonesian tea sourced from highland plantations</p>
+                                    </div>
+                                </li>
+                                <li class="flex items-start">
+                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
+                                    <div>
+                                        <span class="font-medium">Competitive Pricing:</span>
+                                        <p class="text-gray-600">Cost-effective solutions with sustainable supply chain</p>
+                                    </div>
+                                </li>
+                                <li class="flex items-start">
+                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
+                                    <div>
+                                        <span class="font-medium">Product Variety:</span>
+                                        <p class="text-gray-600">Wide range of tea types including black and green tea</p>
+                                    </div>
+                                </li>
+                                <li class="flex items-start">
+                                    <i class="fas fa-check-circle text-primary mt-1 mr-3"></i>
+                                    <div>
+                                        <span class="font-medium">Flexible Packaging:</span>
+                                        <p class="text-gray-600">Customizable packaging solutions to meet buyer requirements</p>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <h3 class="text-xl font-semibold mb-3">Natural & Premium Quality</h3>
-                        <p class="text-gray-600">Finest quality Indonesian tea, naturally grown in pristine highlands and processed under strict quality control standards</p>
-                    </div>
-                    <div class="bg-white p-8 rounded-2xl shadow-lg">
-                        <div class="text-primary text-3xl mb-4">
-                            <i class="fas fa-chart-line"></i>
+                        <div>
+                            <h3 class="text-xl font-semibold mb-4 text-primary">Production Capacity</h3>
+                            <div class="space-y-4">
+                                <div class="p-4 bg-primary/5 rounded-lg">
+                                    <div class="flex justify-between items-center mb-2">
+                                        <span class="font-medium">Monthly Production</span>
+                                        <span class="bg-primary/10 text-primary px-2 py-1 rounded text-sm">360 tons</span>
+                                    </div>
+                                    <p class="text-gray-600 text-sm">Combined capacity for both tea varieties</p>
+                                </div>
+                                <div class="p-4 bg-primary/5 rounded-lg">
+                                    <div class="flex justify-between items-center mb-2">
+                                        <span class="font-medium">Minimum Order</span>
+                                        <span class="bg-primary/10 text-primary px-2 py-1 rounded text-sm">1 ton</span>
+                                    </div>
+                                    <p class="text-gray-600 text-sm">Standard packaging in 25kg bags</p>
+                                </div>
+                            </div>
                         </div>
-                        <h3 class="text-xl font-semibold mb-3">Competitive & Sustainable</h3>
-                        <p class="text-gray-600">Market-competitive pricing with guaranteed year-round supply through our extensive plantation network</p>
                     </div>
-                    <div class="bg-white p-8 rounded-2xl shadow-lg">
-                        <div class="text-primary text-3xl mb-4">
-                            <i class="fas fa-leaf"></i>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-3">Diverse Tea Selection</h3>
-                        <p class="text-gray-600">Comprehensive range of tea varieties including green, black, and specialized blends to meet market demands</p>
-                    </div>
-                    <div class="bg-white p-8 rounded-2xl shadow-lg">
-                        <div class="text-primary text-3xl mb-4">
-                            <i class="fas fa-box"></i>
-                        </div>
-                        <h3 class="text-xl font-semibold mb-3">Flexible Packaging</h3>
-                        <p class="text-gray-600">Customizable packaging solutions tailored to your specific requirements and market needs</p>
-                    </div>
+                </div>
+
+                <!-- Visual Showcase -->
+                <div class="grid md:grid-cols-3 gap-6">
+                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing Facility" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/tea-packaging.jpg" alt="Tea Packaging Process" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="../assets/images/tea-quality.jpg" alt="Quality Control" class="rounded-xl shadow-lg h-48 w-full object-cover">
                 </div>
             </div>
         </div>
@@ -293,61 +326,126 @@
         <div class="container mx-auto px-6">
             <div class="text-center mb-16">
                 <h2 class="text-4xl font-bold text-primary mb-6">How to Order</h2>
-                <p class="text-gray-600 text-lg max-w-3xl mx-auto">We've simplified the ordering process to ensure a smooth experience for our clients. Follow these steps to place your order:</p>
+                <p class="text-gray-600 text-lg max-w-3xl mx-auto">Our streamlined ordering process ensures quality and satisfaction at every step:</p>
             </div>
 
-            <div class="grid md:grid-cols-4 gap-8 mb-16">
-                <div class="text-center">
-                    <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-comments text-2xl text-primary"></i>
+            <div class="max-w-3xl mx-auto mb-16">
+                <div class="relative">
+                    <!-- Timeline line -->
+                    <div class="absolute left-1/2 transform -translate-x-1/2 h-full w-1 bg-primary/20"></div>
+                    
+                    <!-- Steps -->
+                    <div class="space-y-12">
+                        <!-- Step 1 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-comments text-xl"></i>
+                            </div>
+                            <div class="ml-auto w-5/12 pl-8">
+                                <h3 class="text-xl font-semibold mb-2">Initial Contact</h3>
+                                <p class="text-gray-600">Contact us with your specific requirements</p>
+                            </div>
+                        </div>
+
+                        <!-- Step 2 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-coffee text-xl"></i>
+                            </div>
+                            <div class="mr-auto w-5/12 pr-8 text-right">
+                                <h3 class="text-xl font-semibold mb-2">Product Discussion</h3>
+                                <p class="text-gray-600">Discuss aroma, taste, and appearance specifications</p>
+                            </div>
+                        </div>
+
+                        <!-- Step 3 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary/60 rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-box-open text-xl"></i>
+                            </div>
+                            <div class="ml-auto w-5/12 pl-8">
+                                <div class="flex items-center gap-2 mb-1">
+                                    <h3 class="text-xl font-semibold">Sample Submission</h3>
+                                    <span class="bg-gray-100 text-gray-600 text-xs px-2 py-1 rounded-full">Optional</span>
+                                </div>
+                                <p class="text-gray-600">Submit your reference sample for matching, or proceed with our standard specifications</p>
+                            </div>
+                        </div>
+
+                        <!-- Step 4 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary/60 rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-check-circle text-xl"></i>
+                            </div>
+                            <div class="mr-auto w-5/12 pr-8 text-right">
+                                <div class="flex items-center justify-end gap-2 mb-1">
+                                    <span class="bg-gray-100 text-gray-600 text-xs px-2 py-1 rounded-full">Optional</span>
+                                    <h3 class="text-xl font-semibold">Sample Approval</h3>
+                                </div>
+                                <p class="text-gray-600">Review and approve our sample match, or proceed with our standard quality</p>
+                            </div>
+                        </div>
+
+                        <!-- Step 5 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-file-signature text-xl"></i>
+                            </div>
+                            <div class="ml-auto w-5/12 pl-8">
+                                <h3 class="text-xl font-semibold mb-2">Order Confirmation</h3>
+                                <p class="text-gray-600">Sign sales order and complete payment</p>
+                            </div>
+                        </div>
+
+                        <!-- Step 6 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-industry text-xl"></i>
+                            </div>
+                            <div class="mr-auto w-5/12 pr-8 text-right">
+                                <h3 class="text-xl font-semibold mb-2">Production</h3>
+                                <p class="text-gray-600">We prepare your order with care</p>
+                            </div>
+                        </div>
+
+                        <!-- Step 7 -->
+                        <div class="relative flex items-center">
+                            <div class="absolute left-1/2 transform -translate-x-1/2 w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white z-10">
+                                <i class="fas fa-shipping-fast text-xl"></i>
+                            </div>
+                            <div class="ml-auto w-5/12 pl-8">
+                                <h3 class="text-xl font-semibold mb-2">Shipment</h3>
+                                <p class="text-gray-600">Products ready for delivery</p>
+                            </div>
+                        </div>
                     </div>
-                    <h3 class="text-xl font-semibold mb-3">1. Initial Contact</h3>
-                    <p class="text-gray-600">Reach out via WhatsApp or email to discuss your requirements</p>
-                </div>
-                <div class="text-center">
-                    <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-file-contract text-2xl text-primary"></i>
-                    </div>
-                    <h3 class="text-xl font-semibold mb-3">2. Quote & Sample</h3>
-                    <p class="text-gray-600">Receive detailed quotation and request product samples</p>
-                </div>
-                <div class="text-center">
-                    <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-handshake text-2xl text-primary"></i>
-                    </div>
-                    <h3 class="text-xl font-semibold mb-3">3. Confirm Order</h3>
-                    <p class="text-gray-600">Place your order and complete the payment process</p>
-                </div>
-                <div class="text-center">
-                    <div class="w-16 h-16 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-4">
-                        <i class="fas fa-shipping-fast text-2xl text-primary"></i>
-                    </div>
-                    <h3 class="text-xl font-semibold mb-3">4. Delivery</h3>
-                    <p class="text-gray-600">Track your order through our reliable shipping network</p>
                 </div>
             </div>
 
-            <!-- Delivery Experience -->
-            <div class="grid md:grid-cols-3 gap-8 mb-12">
-                <div class="rounded-2xl overflow-hidden shadow-lg">
-                    <img src="../assets/images/delivery-1.jpg" alt="Tea products being prepared for shipping" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h4 class="font-semibold mb-2">Quality Packaging</h4>
-                        <p class="text-gray-600">Products are carefully packed to maintain freshness during transit</p>
+            <!-- Production Experience Gallery -->
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mb-16">
+                <div class="relative group overflow-hidden rounded-xl shadow-lg">
+                    <img src="../assets/images/tea-processing.jpg" alt="Tea Processing Facility" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                    <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
+                        <p class="text-white text-center px-4">State-of-the-art processing facility</p>
                     </div>
                 </div>
-                <div class="rounded-2xl overflow-hidden shadow-lg">
-                    <img src="../assets/images/delivery-2.jpg" alt="Container loading process" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h4 class="font-semibold mb-2">Efficient Loading</h4>
-                        <p class="text-gray-600">Professional handling for safe and secure transportation</p>
+                <div class="relative group overflow-hidden rounded-xl shadow-lg">
+                    <img src="../assets/images/tea-quality.jpg" alt="Quality Control Process" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                    <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
+                        <p class="text-white text-center px-4">Rigorous quality control</p>
                     </div>
                 </div>
-                <div class="rounded-2xl overflow-hidden shadow-lg">
-                    <img src="../assets/images/delivery-3.jpg" alt="Products arriving at destination" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h4 class="font-semibold mb-2">Global Delivery</h4>
-                        <p class="text-gray-600">Reliable shipping to destinations worldwide</p>
+                <div class="relative group overflow-hidden rounded-xl shadow-lg">
+                    <img src="../assets/images/tea-packaging.jpg" alt="Packaging Process" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                    <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
+                        <p class="text-white text-center px-4">Professional packaging</p>
+                    </div>
+                </div>
+                <div class="relative group overflow-hidden rounded-xl shadow-lg">
+                    <img src="../assets/images/tea-shipping.jpg" alt="Shipping Process" class="w-full h-64 object-cover transform group-hover:scale-110 transition duration-300">
+                    <div class="absolute inset-0 bg-black/40 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
+                        <p class="text-white text-center px-4">Efficient shipping process</p>
                     </div>
                 </div>
             </div>
