--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="md:w-1/2">
                     <div class="relative h-[480px]">
                         <img src="assets/images/tea-plantation.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
-                        <div class="absolute -bottom-6 -right-6 bg-primary text-white p-8 rounded-2xl shadow-xl hidden md:block">
+                        <div class="absolute -bottom-6 -right-6 bg-primary text-white p-8 rounded-2xl shadow-xl hidden md:block rotate-3 hover:rotate-0 transition-transform duration-300">
                             <p class="text-4xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
                         </div>
@@ -604,7 +604,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-12 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 TropicaFarm. All Rights Reserved.</p>
+                <p>&copy; 2025 TropicaFarm. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
