product reduce Hero size

--- a/products/tea.html
+++ b/products/tea.html
@@ -49,6 +49,7 @@
         .hero-tea { 
             position: relative;
             overflow: hidden;
+            min-height: 40vh;
         }
         .hero-tea video {
             position: absolute;
@@ -79,39 +80,80 @@
         .swiper-pagination-bullet-active {
             background: #2c7744;
         }
+        /* Header Styles */
+        #navbar {
+            background: transparent;
+            transition: all 0.3s ease;
+        }
+        #navbar.scrolled {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(5px);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        #navbar .nav-link {
+            color: white;
+            transition: color 0.3s ease;
+        }
+        #navbar.scrolled .nav-link {
+            color: #6b7280;
+        }
+        #navbar.scrolled .nav-link:hover {
+            color: #2c7744;
+        }
+        #navbar .logo-text,
+        #navbar .logo-icon {
+            color: white;
+            transition: color 0.3s ease;
+        }
+        #navbar.scrolled .logo-text,
+        #navbar.scrolled .logo-icon {
+            color: #2c7744;
+        }
+        #navbar .order-button {
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        #navbar.scrolled .order-button {
+            background: #2c7744;
+            border: none;
+        }
     </style>
 </head>
 <body class="font-sans text-gray-800">
-    <!-- Header (reuse from index.html but adjust paths) -->
-    <header class="bg-white shadow-md fixed w-full z-40 transition-all duration-300" id="navbar">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="../" class="flex items-center space-x-2">
-                <i class="fas fa-leaf text-primary text-2xl"></i>
-                <span class="text-2xl font-bold text-primary">TropicaFarm</span>
+    <!-- Header -->
+    <header id="navbar" class="fixed w-full z-40 transition-all duration-300">
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <a href="../index.html" class="flex items-center space-x-2 group">
+                <i class="fas fa-leaf logo-icon text-2xl"></i>
+                <span class="text-2xl font-bold logo-text">TropicaFarm</span>
             </a>
-            <nav class="hidden md:flex space-x-6">
-                <a href="../" class="font-medium hover:text-primary">Home</a>
-                <a href="../#about" class="font-medium hover:text-primary">About Us</a>
-                <a href="../#products" class="font-medium hover:text-primary">Products</a>
-                <a href="../#contact" class="font-medium hover:text-primary">Contact</a>
-            </nav>
-            <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="hidden md:inline-flex bg-primary hover:bg-accent text-white px-4 py-2 rounded-lg transition duration-300">
-                <i class="fab fa-whatsapp mr-2"></i> Order Now
-            </a>
+            <div class="flex items-center space-x-6">
+                <nav class="hidden md:flex space-x-6">
+                    <a href="../index.html" class="nav-link">Home</a>
+                    <a href="../#about" class="nav-link">About</a>
+                    <a href="../#products" class="nav-link">Products</a>
+                    <a href="../#contact" class="nav-link">Contact</a>
+                </nav>
+                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="order-button text-white px-6 py-2 rounded-lg transition duration-300 flex items-center space-x-2">
+                    <i class="fab fa-whatsapp"></i>
+                    <span class="hidden md:inline">Order Now</span>
+                </a>
+            </div>
         </div>
     </header>
 
     <!-- Hero Section -->
-    <section class="hero-tea min-h-[80vh] flex items-center text-white pt-20">
+    <section class="hero-tea flex items-center text-white pt-20">
         <video autoplay muted loop playsinline>
             <source src="../assets/videos/tea-harvesting.mp4" type="video/mp4">
         </video>
-        <div class="container mx-auto px-6 py-20">
+        <div class="container mx-auto px-6 py-12">
             <div class="max-w-3xl">
-                <h1 class="text-5xl md:text-6xl font-bold mb-6 leading-tight">Two Decades of Excellence in Tea Production</h1>
-                <p class="text-xl mb-8 leading-relaxed">Trusted by global partners for consistently delivering premium Indonesian tea since 2004. Our expertise ensures exceptional quality in every harvest.</p>
+                <h1 class="text-4xl md:text-5xl font-bold mb-4 leading-tight">Two Decades of Excellence in Tea Production</h1>
+                <p class="text-lg mb-6 leading-relaxed">Trusted by global partners for consistently delivering premium Indonesian tea since 2004. Our expertise ensures exceptional quality in every harvest.</p>
                 <div class="flex flex-wrap gap-4">
-                    <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center">
+                    <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20tea%20products" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-3 rounded-xl transition duration-300 inline-flex items-center">
                         <i class="fab fa-whatsapp text-xl mr-2"></i> Order Now
                     </a>
                 </div>
@@ -485,6 +527,19 @@
     </footer>
 
     <script>
+        // Navbar scroll effect
+        window.addEventListener('scroll', () => {
+            const navbar = document.getElementById('navbar');
+            const heroSection = document.querySelector('.hero-tea');
+            const heroHeight = heroSection.offsetHeight;
+            
+            if (window.scrollY > heroHeight) {
+                navbar.classList.add('scrolled');
+            } else {
+                navbar.classList.remove('scrolled');
+            }
+        });
+
         // Initialize Swiper
         const swiper = new Swiper('.product-swiper', {
             loop: true,
@@ -500,16 +555,6 @@
                 delay: 5000,
                 disableOnInteraction: false,
             },
-        });
-
-        // Navbar scroll effect
-        window.addEventListener('scroll', () => {
-            const navbar = document.getElementById('navbar');
-            if (window.scrollY > 50) {
-                navbar.classList.add('shadow-lg');
-            } else {
-                navbar.classList.remove('shadow-lg');
-            }
         });
     </script>
 </body>
